@@ -17,9 +17,10 @@ webkitgtk (1.10.2-1) UNRELEASED; urgency=low
     following upstream's bump but using the first stable
     release instead of the development one
   * debian/*webkit2*, debian/rules, debian/control:
-  - new packages for the WebKit2GTK+ library
+  - new packages for the WebKit2GTK+ library, not built by default, you
+    can enable them by setting the make ENABLE_WEBKIT2 variable to yes
 
- -- Gustavo Noronha Silva <kov@debian.org>  Fri, 30 Nov 2012 11:16:43 -0200
+ -- Gustavo Noronha Silva <kov@debian.org>  Wed, 05 Dec 2012 23:41:36 -0200
 
 webkit (1.9.2-1) experimental; urgency=low
 
